update Dockerfile & Compose

--- a/docker/gpu/docker-compose.yml
+++ b/docker/gpu/docker-compose.yml
@@ -16,8 +16,8 @@ services:
             - "/tmp/.X11-unix:/tmp/.X11-unix"
             - "/dev/snd:/dev/snd"
             - "$HOME/.Xauthority:/$HOME/.Xauthority:rw"
-            #- "/dataset:/dataset"
-            #- "/data:/data"
+            - "/dataset:/dataset"
+            - "/data:/data"
             #- "/home/${USERNAME}/.ssh/:/home/${USERNAME}/.ssh/"
           environment:
             - "DISPLAY"
