--- a/docker/jetson/docker-compose.yml
+++ b/docker/jetson/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
-        yolo_jetson_image_rs:
+        yolo_jetson_image_rs_test:
           build:
             context: ./
             args:
               USER_ID: ${USERID}
               GROUP_ID: ${GROUPID}
               USER_NAME: ${USERNAME}
-          image: "yolo_jetson_image_rs"
+          image: "yolo_jetson_image_rs_test"
           container_name: ${CONTAINERNAME} 
           network_mode: "host"
           volumes:
