--- a/docker/runtime/gpu/docker-compose.yml
+++ b/docker/runtime/gpu/docker-compose.yml
@@ -11,7 +11,7 @@ services:
             - "/dev/:/dev/"
             - "/tmp/.X11-unix:/tmp/.X11-unix"
             - "/dev/snd:/dev/snd"
-            - "$HOME/.Xauthority:/$HOME/.Xauthority:rw"
+            - "$HOME/.Xauthority:/root/.Xauthority:rw"
             - "/dataset:/dataset"
             - "/data:/data"
             - "$HOME/log:/workspace/log"
